correction mobile

--- a/src/components/Carrousel/carrousel.css
+++ b/src/components/Carrousel/carrousel.css
@@ -101,7 +101,7 @@
     }    
     .carrousel img {
       max-width: 335px;
-      top: 40%;
+      top: 45%;
     }           
   }
 
