--- a/src/components/HomeBanner/homeBanner.css
+++ b/src/components/HomeBanner/homeBanner.css
@@ -30,6 +30,6 @@ h1 {
       line-height: 1.2 !important;
       text-align: initial;      
       margin: 20px !important;
-      max-width: 60%;
+      max-width: 80%;
     }
   }
